# GotitUpdater

./: .gitignore  CMakeLists.txt  README.md  main.cpp
DownloadModule/: download.cpp  download.h
